--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flovv",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
-  "author": "Erhan Gundogan",
+  "author": "Erhan Gundogan <erhan.gundogan@gmail.com>",
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
@@ -21,7 +21,6 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
