--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "flovv",
   "version": "0.1.0",
-  "main": "index.js",
   "author": "Erhan Gundogan <erhan.gundogan@gmail.com>",
+  "main": "index.js",
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
+    "clean": "rimraf dist",
     "lint": "./node_modules/eslint/bin/eslint.js --config .eslintrc src/",
     "test": "jest --config jest.config.js",
-    "build": "yarn build:dev && yarn build:prod",
-    "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development"
+    "build": "yarn clean && yarn build:dev && yarn build:prod",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production",
+    "start": "webpack-dev-server --open --mode=development"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "nanoid": "^2.1.0",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
@@ -24,7 +28,6 @@
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -36,7 +39,9 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
