--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "clean": "rimraf dist",
     "lint": "./node_modules/eslint/bin/eslint.js --config .eslintrc src/",
     "test": "jest --config jest.config.js",
-    "build": "yarn clean && yarn build:dev && yarn build:prod",
-    "build:dev": "webpack --mode=development",
+    "build": "yarn clean && yarn build:prod",
     "build:prod": "webpack --mode=production",
     "start": "webpack-dev-server --open --mode=development"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
     "nanoid": "^2.1.0",
-    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
