--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "react-test-renderer": "^16.11.0",
     "rimraf": "^3.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.0.0",
