upgrade deps, tidy up code

--- a/package.json
+++ b/package.json
@@ -8,41 +8,41 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "./node_modules/eslint/bin/eslint.js --config .eslintrc src/",
-    "test": "jest --config jest.config.js",
+    "test": "jest --config jest.config.js --passWithNoTests",
     "build": "yarn clean && yarn build:prod",
     "build:prod": "webpack --mode=production",
     "start": "webpack-dev-server --open --mode=development"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "nanoid": "^2.1.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@reach/router": "^1.3.1",
+    "nanoid": "^2.1.11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.1.0",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.15.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "react-test-renderer": "^16.11.0",
-    "rimraf": "^3.0.0",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.0.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "jest": "^25.1.0",
+    "react-test-renderer": "^16.12.0",
+    "rimraf": "^3.0.2",
+    "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
