--- a/package.json
+++ b/package.json
@@ -24,25 +24,28 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.1",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "jest": "^26.6.3",
+    "jest": "^27.0.1",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.2",
-    "webpack": "^5.37.0",
+    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "resolutions": {
+    "dns-packet": "^1.3.4"
   }
 }
